--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@excalidraw/excalidraw": "^0.17.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"svelte-react-kit": "^0.1.12"
+		"svelte-preprocess-react": "^0.17.1"
 	}
 }
