--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"@types/react": "^17.0.4",
-		"@types/react-dom": "^17.0.9",
+		"@types/react-dom": "^18.3.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -42,7 +42,6 @@
 	"dependencies": {
 		"@excalidraw/excalidraw": "^0.17.6",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"svelte-preprocess-react": "^0.17.1"
+		"react-dom": "^18.3.1"
 	}
 }
