--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@testing-library/svelte": "^5.2.1",
 		"@types/eslint": "^8.56.7",
+		"@types/node": "^20.14.12",
 		"@types/react": "^17.0.4",
 		"@types/react-dom": "^18.3.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"jest-dom": "^4.0.0",
+		"jsdom": "^24.1.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
